<resources>
    <string name="app_name">Comp Test</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
    <string name="welcome">Welcome</string>
    <string name="selected_username">Selected Username</string>
    <string name="choose">Choose a User</string>
    <string name="is_palindrome">isPalindrome</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="retry">Try Again</string>
    <string name="not_palindrome">not palindrome</string>
</resources>